--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: single
 header:
-  overlay_image: "/assets/images/OR_coast.JPG"
+  overlay_image: /assets/images/OR_coast.JPG
 ---
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
