--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,8 +1,9 @@
 ---
-layout: single
-header:
-  overlay_image: /assets/images/OR_coast.JPG
+layout: archive
+
 ---
+
+<img src="/pics/yale2.png" alt="Mountain View" style="width:900px;height:200px;">
 
 <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
