--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -399,3 +399,6 @@
   font-size: $type-size-6;
   text-transform: uppercase;
 }
+
+/* user added -----------------*/
+/* for markdown math ---------------*/
