--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -33,6 +33,10 @@
     font-family: $sans-serif-narrow;
   }
 
+  h3, h4 {
+    font-size: $type-size-5;
+  }
+
   p, li {
     font-family: $sans-serif;
     font-size: $type-size-6;
@@ -77,7 +81,7 @@
   }
 
   img {
-    max-width: 110px;
+    max-width: 150px;
     border-radius: 50%;
 
     @include breakpoint($large) {
